# DeepSeek-TUI

./: CHANGELOG.md  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: Cargo.toml
crates/tui/src/: config.rs  localization.rs  main.rs  palette.rs  pricing.rs  runtime_threads.rs  session_manager.rs  settings.rs  theme_qa_audit.rs  tool_output_receipts.rs
crates/tui/src/commands/: session.rs  status.rs
crates/tui/src/skills/: install.rs  mod.rs
crates/tui/src/tui/: app.rs  color_compat.rs  command_palette.rs  context_menu.rs  footer_ui.rs  markdown_render.rs  mod.rs  mouse_ui.rs  session_picker.rs  ui.rs
crates/tui/src/tui/ui/: tests.rs
crates/tui/src/tui/views/: mod.rs
crates/tui/tests/: palette_audit.rs
docs/: CONFIGURATION.md
npm/codewhale/: package.json
npm/deepseek-tui/: package.json
web/app/[locale]/faq/: page.tsx
