[package]
name = "codewhale-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model/provider registry and fallback strategy for DeepSeek workspace architecture"

[dependencies]
codewhale-config = { path = "../config", version = "0.8.45" }
serde.workspace = true
