[package]
name = "codewhale-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config schema and precedence model for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
codewhale-secrets = { path = "../secrets", version = "0.8.45" }
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
